--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,13 @@
 .mainBackground {
   background-color: #277bc0;
 }
+.modal-image {
+  width: 100%;
+  max-width: 900px;
+}
+.btn-space {
+  margin-right: 10px;
+}
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
