--- a/css/styles.css
+++ b/css/styles.css
@@ -10,16 +10,28 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+/*  Image settint */
+.logoImg {
+  width: 200px;
+  height: 200px;
+}
+.mobileImg {
+  width: 200px;
+  height: 400px;
+}
+.modal-image {
+  width: 100%;
+  max-width: 900px;
+}
+/* -------------------- */
 .mainColor {
   color: #ffb200;
 }
 .mainBackground {
   background-color: #277bc0;
 }
-.modal-image {
-  width: 100%;
-  max-width: 900px;
-}
+
 .btn-space {
   margin-right: 10px;
 }
