--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,18 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
+/* scroll animation */
+.hidden {
+  opacity: 0;
+  filter: blur(10px);
+  transform: translateX(-50%);
+  transition: all 1s;
+}
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
 /*  Image settint */
 .logoImg {
   width: 200px;
